Fixed Nav Bar so that borders for each LI no longer overlapping.

--- a/site/main.css
+++ b/site/main.css
@@ -73,23 +73,28 @@ h1 {
     height: 36px;
     z-index: 1;
 
+
 }
 
 .nav li {
     float: right;
-
 }
 
 .nav li a {
     padding: 8px 15px;
-    border: 1px solid #686773;
+    border-top: 2px solid #000000;
+    border-bottom: 2px solid #000000;
+    border-right: 2px solid #000000;
     display: block;
     text-decoration: none;
     color: #ffffff;
-    border-collapse: collapse;
     background-color: #8F3BAE;
     font-family: 'Ubuntu', Helvetica, sans-serif;
 
+}
+
+.first {
+    border-left: 2px solid #000000;
 }
 
 .nav li a:hover {
